Kubernetes_exam/my-service-eval.yml
apiVersion: v1
kind: Service
metadata:
  name: my-user-query-service
  labels:
    app: my-user-query-api
spec:
  type: ClusterIP
  ports:
    - port: 8001 
      protocol: TCP
      targetPort: 8000
  selector:
    app: my-user-query-api
