Kubernetes_exam/my-ingress-eval.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-user-query-ingress
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: my-user-query-service
                port:
                  number: 8001
